actualización de enlaces y modificacion de title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio - Matias Sandoval</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
             </div>
             <div class="presentacion__contenedor_botones">
                 <a href="#sobre-mi" class="boton" role="button"> Sobre mi</a>
-                <a href="assets/docs/CV-Sandoval-Matias.pdf" target="_blank" rel="noopener noreferrer" class="boton boton_oscuro" role="button"> Descargar CV</a>
+                <a href="assets/docs/Sandoval-Matias-curriculm-con-QR.pdf" target="_blank" rel="noopener noreferrer" class="boton boton_oscuro" role="button"> Descargar CV</a>
             </div>
         </section>
       <article class="articulo sobre_mi" id="sobre-mi">
@@ -236,7 +236,7 @@
             <li class="enlaces__item">
               <a
                 class="enlaces__enlace enlaces__enlace_footer"
-                href="#"
+                href="https://www.instagram.com/mts_sando?igsh=ZXV3a2s4ajV2cHpi"
                 target="_blank" rel="noopener noreferrer"
               >
                 <img
